--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,8 +1,8 @@
 repos:
-  # - repo: https://github.com/psf/black
-  #   rev: 24.4.2           # pon la versión que quieras fijar
-  #   hooks:
-  #     - id: black
+  - repo: https://github.com/psf/black
+    rev: 24.4.2           # pon la versión que quieras fijar
+    hooks:
+      - id: black
 
   - repo: https://github.com/PyCQA/isort
     rev: 5.13.2
